Fix broken layout of home with switch to bootstrap5.

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -1,5 +1,5 @@
 .welcomeback{
-  background-color: theme('colors.gray-15');
+  background-color: theme('colors.gray-150');
   border-radius: 16px;
   position: relative;
   padding: 16px;
